# Advent2020

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  dayXX.rs  lib.rs  main.rs  utils.rs
