[package]
name = "advent2020"
version = "0.1.0"
authors = ["Hugo Laloge <hugo.laloge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "2.0"
itertools = "0.9"
scan_fmt = "0.2"

[features]
default = []
nightly = []
